spacing fixes

--- a/public/responsive/small.css
+++ b/public/responsive/small.css
@@ -244,7 +244,7 @@ footer section.bottom {
   }
   
   .strategy .tile {
-    width: 85%;
+    width: 90%;
     margin: 16px 0 16px 0;
   }
   
@@ -254,7 +254,7 @@ footer section.bottom {
   }
   
   .strategy .tile[position="right"]{
-    margin-bottom: 33px;
+    margin-bottom: 15px;
   }
   
   .community p {
@@ -262,7 +262,7 @@ footer section.bottom {
   }
   
   .community .tile {
-    margin-top:15px;
+    margin-top:25px;
   }
   
   .tile .leader {
