--- a/public/responsive/small/portrait.css
+++ b/public/responsive/small/portrait.css
@@ -24,7 +24,7 @@
 }
 
 .about article.last {
-    margin: 0 0 5px 0;
+    margin: 0 0 25px 0;
 }
 
 .about .first{
@@ -65,7 +65,7 @@ section .strategy .tile[position="center"] {
 }
 
 .community .tile[position="right"] {
-  margin-top: 60px;
+  margin-top: 10px;
 }
 
 .community .tile[position="left"] {
@@ -91,6 +91,11 @@ footer {
   
   .community .tile {
     width: 90%;
+  }
+  
+  .community .tile[position="right"] {
+    margin-top: 55px;
+    margin-bottom: 20px;
   }
   
   .about article.last {
