--- a/public/responsive/wide/tablet.css
+++ b/public/responsive/wide/tablet.css
@@ -46,7 +46,7 @@ nav.cloud {
 }
 
 .home .about .last {
-  width: 25%;
+  width: 27%;
 }
 
 .strategy .tile p {
@@ -54,7 +54,7 @@ nav.cloud {
 }
 
 .home .strategy .tile {
-  margin: 4% 0 5.5% 0;
+  margin: 3.6% 0 4% 0;
   height: 50%;
   padding-left: 2%;
   padding-right: 1%;
@@ -77,7 +77,7 @@ nav.cloud {
 
 .community article.tile {
   padding-left: 0.4%;
-  margin-top: 14px;
+  margin-top: 18px;
 }
 
 .bottom-logo {
